--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "i18n": "ng-xi18n --i18nFormat=xlf --outFile=src/locale/messages.xlf",
-    "build-prod-fr": "ng build --i18nFile=src/locale/messages.fr.xlf --i18nFormat=xlf --locale=fr"
+    "build-prod-fr": "ng build --i18n-file=src/locale/messages.fr.xlf --i18n-format=xlf --i18n-locale=fr"
   },
   "private": true,
   "dependencies": {
