--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@angular/youtube-player": "~11.2.6",
     "@auth0/angular-jwt": "^5.0.2",
     "core-js": "^3.9.1",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
-    "youtube-player": "^5.5.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
