--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "i18n": "ng xi18n --i18nFormat=xlf --outFile=locale/messages.xlf",
+    "i18n": "ng extract-i18n --format=xlf --outFile=src/locale/messages.xlf",
     "build-prod-en": "ng build --prod",
     "build-prod-fr": "ng build --i18nFile=src/locale/messages.fr.xlf --i18nFormat=xlf --i18nLocale=fr --prod"
   },
