--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/youtube-player": "~11.2.6",
     "@auth0/angular-jwt": "^5.0.2",
     "core-js": "^3.9.1",
-    "moment": "^2.29.1",
+    "dayjs": "^1.10.4",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
