--- a/package.json
+++ b/package.json
@@ -15,38 +15,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.7",
-    "@angular/cdk": "^11.2.6",
-    "@angular/common": "~11.2.7",
-    "@angular/compiler": "~11.2.7",
-    "@angular/core": "~11.2.7",
+    "@angular/animations": "^11.2.10",
+    "@angular/cdk": "^11.2.9",
+    "@angular/common": "^11.2.10",
+    "@angular/compiler": "^11.2.10",
+    "@angular/core": "^11.2.10",
     "@angular/flex-layout": "~11.0.0-beta.33",
-    "@angular/forms": "~11.2.7",
-    "@angular/localize": "^11.2.7",
-    "@angular/material": "^11.2.6",
-    "@angular/platform-browser": "~11.2.7",
-    "@angular/platform-browser-dynamic": "~11.2.7",
-    "@angular/router": "~11.2.7",
-    "@angular/youtube-player": "~11.2.6",
+    "@angular/forms": "^11.2.10",
+    "@angular/localize": "^11.2.10",
+    "@angular/material": "^11.2.9",
+    "@angular/platform-browser": "^11.2.10",
+    "@angular/platform-browser-dynamic": "^11.2.10",
+    "@angular/router": "^11.2.10",
+    "@angular/youtube-player": "^11.2.9",
     "@auth0/angular-jwt": "^5.0.2",
-    "core-js": "^3.9.1",
+    "core-js": "^3.10.2",
     "dayjs": "^1.10.4",
     "normalize.css": "^8.0.1",
-    "rxjs": "~6.6.6",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.6",
-    "@angular/cli": "~11.2.6",
-    "@angular/compiler-cli": "~11.2.7",
-    "@angular/language-service": "~11.2.7",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1102.9",
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "^11.2.10",
+    "@angular/language-service": "^11.2.10",
+    "@types/jasmine": "^3.6.9",
+    "@types/node": "^12.20.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.1",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
