--- a/package.json
+++ b/package.json
@@ -10,50 +10,56 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "i18n": "ng extract-i18n --format=xlf --outFile=src/locale/messages.xlf",
-    "build-prod-en": "ng build --prod",
-    "build-prod-fr": "ng build --i18nFile=src/locale/messages.fr.xlf --i18nFormat=xlf --i18nLocale=fr --prod"
+    "build-prod-en": "ng build --configuration production",
+    "build-prod-fr": "ng build --i18nFile=src/locale/messages.fr.xlf --i18nFormat=xlf --i18nLocale=fr --configuration production"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.10",
-    "@angular/cdk": "^11.2.9",
-    "@angular/common": "^11.2.10",
-    "@angular/compiler": "^11.2.10",
-    "@angular/core": "^11.2.10",
-    "@angular/flex-layout": "~11.0.0-beta.33",
-    "@angular/forms": "^11.2.10",
-    "@angular/localize": "^11.2.10",
-    "@angular/material": "^11.2.9",
-    "@angular/platform-browser": "^11.2.10",
-    "@angular/platform-browser-dynamic": "^11.2.10",
-    "@angular/router": "^11.2.10",
-    "@angular/youtube-player": "^11.2.9",
+    "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/flex-layout": "~14.0.0-beta.40",
+    "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.1.0",
+    "@angular/material": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/router": "^14.1.0",
+    "@angular/youtube-player": "^14.1.0",
     "@auth0/angular-jwt": "^5.0.2",
     "core-js": "^3.10.2",
     "dayjs": "^1.10.4",
     "normalize.css": "^8.0.1",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.3"
+    "rxjs": "~7.5.0",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.9",
-    "@angular/cli": "^11.2.9",
-    "@angular/compiler-cli": "^11.2.10",
-    "@angular/language-service": "^11.2.10",
-    "@types/jasmine": "^3.6.9",
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular-eslint/builder": "14.0.2",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
+    "@angular-eslint/schematics": "14.0.2",
+    "@angular-eslint/template-parser": "14.0.2",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
+    "@angular/language-service": "^14.1.0",
+    "@types/jasmine": "^4.0.3",
     "@types/node": "^12.20.10",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "ts-node": "^10.9.1",
+    "typescript": "~4.7.2"
   }
 }
