--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
-    "@angular/flex-layout": "~14.0.0-beta.40",
     "@angular/forms": "^14.1.0",
     "@angular/localize": "^14.1.0",
     "@angular/material": "^14.1.0",
@@ -50,6 +49,7 @@
     "@types/node": "^12.20.10",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.18.0",
     "jasmine-core": "~4.2.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -58,7 +58,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.29",
     "protractor": "~7.0.0",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~4.7.2"
   }
