--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "es2018",
       "dom"
     ],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   }
 }
