--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "dom"
     ],
     "useDefineForClassFields": false,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "strictTemplates": true
